--- a/config/dependencies/data.gradle
+++ b/config/dependencies/data.gradle
@@ -19,32 +19,31 @@
  */
 
 dependencies {
-    def dataDependencies = rootProject.ext.dataDependencies
-    def dataTestDependencies = rootProject.ext.dataTestDependencies
+    def libraries = rootProject.ext.libraries
 
-    apt dataDependencies.daggerCompiler
-    apt dataDependencies.autoValue
+    apt libraries.dagger.compiler
+    apt libraries.autoValue
 
     // FIXME? (DEPENDENCY) - Possible to set to implementation? Retrofit dependencies are not
     // directly exposed to consumers (though indirectly are). This api scope may already be correct.
     // E.G. DataServiceFactory includes okhttp3 and retrofit2 symbols in compiled class file.
-    api dataDependencies.retrofit
+    api libraries.retrofit.core
 
     implementation project(':common')
     implementation project(':domain')
 
-    implementation dataDependencies.rxJava
-    implementation dataDependencies.dagger
-    implementation dataDependencies.retrofitRxJavaAdapter
-    implementation dataDependencies.retrofitJacksonConverter
-    implementation dataDependencies.jacksonCore
-    implementation dataDependencies.jacksonDatabind
-    implementation dataDependencies.jacksonAnnotations
+    implementation libraries.rxJava
+    implementation libraries.dagger.core
+    implementation libraries.retrofit.rxJavaAdapter
+    implementation libraries.retrofit.jacksonConverter
+    implementation libraries.jackson.core
+    implementation libraries.jackson.databind
+    implementation libraries.jackson.annotations
 
-    compileOnly dataDependencies.javaxAnnotation
-    compileOnly dataDependencies.autoValue
+    compileOnly libraries.javaxAnnotation
+    compileOnly libraries.autoValue
 
-    testImplementation dataTestDependencies.junit
-    testImplementation dataTestDependencies.assertj
-    testImplementation dataTestDependencies.mockitoCore
+    testImplementation libraries.jUnit
+    testImplementation libraries.assertJ
+    testImplementation libraries.mockito.core
 }
