--- a/config/dependencies/presentation-java-swing-mvp.gradle
+++ b/config/dependencies/presentation-java-swing-mvp.gradle
@@ -19,21 +19,20 @@
  */
 
 dependencies {
-    def presentationJavaDependencies = rootProject.ext.presentationJavaDependencies
-    def presentationJavaTestDependencies = rootProject.ext.presentationJavaTestDependencies
+    def libraries = rootProject.ext.libraries
 
-    apt presentationJavaDependencies.daggerCompiler
-    apt presentationJavaDependencies.autoValue
+    apt libraries.dagger.compiler
+    apt libraries.autoValue
 
     compile project(':presentation-java')
 
-    compile presentationJavaDependencies.rxJava
-    compile presentationJavaDependencies.dagger
+    compile libraries.rxJava
+    compile libraries.dagger.core
 
-    compileOnly presentationJavaDependencies.javaxAnnotation
-    compileOnly presentationJavaDependencies.autoValue
+    compileOnly libraries.javaxAnnotation
+    compileOnly libraries.autoValue
 
-    testCompile presentationJavaTestDependencies.junit
-    testCompile presentationJavaTestDependencies.assertj
-    testCompile presentationJavaTestDependencies.mockitoCore
+    testCompile libraries.jUnit
+    testCompile libraries.assertJ
+    testCompile libraries.mockito.core
 }
