Binders for business details

--- a/config/dependencies/data.gradle
+++ b/config/dependencies/data.gradle
@@ -29,7 +29,7 @@ dependencies {
     // E.G. DataServiceFactory includes okhttp3 and retrofit2 symbols in compiled class file.
     api libraries.retrofit.core
 
-    implementation project(':common')
+    implementation project(':util')
     implementation project(':domain')
 
     implementation libraries.rxJava
