--- a/presentation-android-mvp/src/main/AndroidManifest.xml
+++ b/presentation-android-mvp/src/main/AndroidManifest.xml
@@ -30,5 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.business.details.BusinessDetailsActivity"
+            android:label="@string/details" />
     </application>
 </manifest>
