--- a/config/dependencies/all-projects.gradle
+++ b/config/dependencies/all-projects.gradle
@@ -43,14 +43,14 @@ ext {
             // Java Libraries
             rxJava         : '2.0.8',
             javaxAnnotation: '1.0',
-            dagger         : '2.11-rc2',
+            dagger         : '2.11',
             autoValue      : '1.4.1',
             retrofit       : '2.2.0',
             jackson        : '2.8.8',
 
             // Android Libraries
             rxAndroid      : '2.0.1',
-            butterKnife    : '8.6.0',
+            butterKnife    : '8.7.0',
             androidSupport : '25.3.1',
             circleIndicator: '1.2.2',
             fresco         : '1.3.0',
