--- a/presentation-android/src/main/AndroidManifest.xml
+++ b/presentation-android/src/main/AndroidManifest.xml
@@ -19,5 +19,6 @@
     package="com.vestrel00.business.search.presentation.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
