--- a/settings.gradle
+++ b/settings.gradle
@@ -16,13 +16,14 @@
 
 rootProject.name = "business-search-app-java"
 
-include ':util'
+include ':commons'
 include ':domain'
 include ':data'
 include ':presentation-java'
-include ':presentation-java-nogui-mvp'
+include ':presentation-java-swing'
 include ':presentation-java-swing-mvp'
 include ':presentation-java-swing-mvvm'
+include ':presentation-java-nogui-mvp'
 include ':presentation-android'
 include ':presentation-android-mvp'
 include ':presentation-android-mvvm'
