--- a/config/dependencies/presentation-java-swing-mvp.gradle
+++ b/config/dependencies/presentation-java-swing-mvp.gradle
@@ -24,7 +24,7 @@ dependencies {
     apt libraries.dagger.compiler
     apt libraries.autoValue
 
-    compile project(':presentation-java')
+    compile project(':presentation-java-swing')
 
     compile libraries.rxJava
     compile libraries.dagger.core
@@ -32,6 +32,7 @@ dependencies {
     compileOnly libraries.javaxAnnotation
     compileOnly libraries.autoValue
 
+    testCompile project(path: ':commons', configuration: 'testOutput')
     testCompile libraries.jUnit
     testCompile libraries.assertJ
     testCompile libraries.mockito.core
