Updated FIXME and TODO comments for the newly released Android Studio / Android Gradle pluging 3.0.x

--- a/config/android/library.gradle
+++ b/config/android/library.gradle
@@ -26,7 +26,7 @@ android {
     // FIXME (GRADLE LIBRARY) - Enable when publishing all library variants (not just release) is finally supported
     // See http://tools.android.com/tech-docs/new-build-system/user-guide#TOC-Referencing-a-Library
     // See https://issuetracker.google.com/issues/37034891
-    // Seems like this will be supported in Android gradle plugin 2.5
+    // Seems like this will be supported in Android gradle plugin 3.0.x
     // See https://developer.android.com/studio/build/gradle-plugin-3-0-0-migration.html
     // publishNonDefault true
 
