--- a/config/dependencies/presentation-java-android.gradle
+++ b/config/dependencies/presentation-java-android.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     // FIXME (GRADLE DEPENDENCY) - Update to api, implementation, compileOnly, and runtimeOnly configurations
     // These are the same configurations provided by the java-library plugin starting at Gradle 3.4
-    // See http://tools.android.com/tech-docs/new-build-system/2-5-alpha-gradle-plugin/trying-gradle-plugin-2-5#TOC-New-dependency-configurations
+    // See https://developer.android.com/studio/build/gradle-plugin-3-0-0-migration.html#new_configurations
 
     compile project(':presentation-java')
 
