Fixed release signing config

--- a/config/android/signing/signing.gradle
+++ b/config/android/signing/signing.gradle
@@ -40,7 +40,7 @@ android {
             signingConfig signingConfigs.debug
         }
 
-        debug {
+        release {
             signingConfig signingConfigs.release
         }
     }
